pkp/pkp-lib#4056 Change default DOI suffix pattern
Move upgrade migration DOI code to pkp-lib where possible
Replace default suffix pattern with default suffix generator
Copy default pattern as custom pattern during migration
Move generic DOI locales to pkp-lib and remove unused locale keys
Include Laravel 9 upsert feature to DOI migrations

--- a/locale/ar_IQ/manager.po
+++ b/locale/ar_IQ/manager.po
@@ -2211,3 +2211,11 @@ msgstr "رسالة جديدة من المناقشة"
 
 msgid "emailTemplate.variable.site.siteContactEmail"
 msgstr "عنوان البريد الالكتروني لجهة الاتصال الرئيسية في الموقع"
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"لاحقة معرف المكون الرقمي يمكنها أن تكون بأي تنسيق، لكنها لا بد أن تكون فريدة "
+"ما بين كل المكونات المنشورة المنضوية تحت نفس البادئة."
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "استعمل الأنماط الافتراضية."
