--- a/locale/ka_GE/manager.po
+++ b/locale/ka_GE/manager.po
@@ -2399,3 +2399,12 @@ msgstr ""
 "მიიღებს გადაწყვეტილებას მოცემული დღის განმავლობაში.<br><br>ეს სტატისტიკა "
 "ცდილობს აღწეროს, თუ როდის შეიძლება ავტორების უმეტესობა თქვენს ჟურნალს "
 "წარუდგინოს გადაწყვეტილება."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"DOI სუფიქსი შეიძლება იყოს ნებისმიერი ფორმის, მაგრამ უნდა იყოს უნიკალური "
+"ყველა გამოქვეყნებულ ობიექტს შორის, რომლებსაც მინიჭებული აქვთ ერთი და იგივე "
+"DOI პრეფიქსი:"
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "ნაგულისხმევი შაბლონის გამოყენება."
