--- a/locale/ku_IQ/manager.po
+++ b/locale/ku_IQ/manager.po
@@ -557,3 +557,12 @@ msgid "manager.setup.publishingDescription"
 msgstr ""
 "ئەم وردەکارییانە لەوانەیە لە ناو زانیاری ناسێنەردا هەبن کە دراون بە "
 "لایەنەکانی سێیەمی ئەرشیفکردن."
+
+msgid "doi.manager.settings.doiSuffix.description"
+msgstr ""
+"پاشگری ناسێنەری سەرچاوە دیجیتاڵییەکان دەکرێت بە هەر جۆرێک ڕیز بکرێت، بەڵام "
+"نابێت هاوشێوەی بڵاوکراوەکانی دیکە بێت و دەبێت هەمان شت بێت لەگەڵ پێشگری "
+"ئەرکدارکراوی ناسێنەری سەرچاوە دیجیتاڵییەکان:"
+
+msgid "doi.manager.settings.doiSuffixDefault"
+msgstr "ڕێکخستنە بنەڕەتییەکان بەکار بهێنە."
